# franka_human_interaction

./: README.md
franka_control/: CMakeLists.txt  package.xml
franka_control/config/: franka_hri_servo.rviz  franka_servo_config.yaml  panda_config.yaml
franka_control/include/franka_control/: block_sorting.hpp  collision_management.hpp  gripper_control.hpp  marker_handling.hpp  robot_control.hpp  utils.hpp
franka_control/launch/: blocks_control.launch.py  franka_servo.launch.py  joy_to_moveit_servo.launch.py  teleop_control.launch.py  vla_control.launch.py
franka_control/src/: joy_to_moveit_servo.cpp  manipulate_blocks.cpp  plates.cpp  servo_control_node.cpp  sorting copy.cpp  sorting.cpp  teleop_control_node.cpp  vla_control_node.cpp
franka_control/src/franka_control/: block_sorting.cpp  collision_management.cpp  gripper_control.cpp  marker_handling.cpp  robot_control.cpp  utils.cpp
franka_control_lib/: CMakeLists.txt
franka_control_lib/include/: franka_controller.hpp
franka_control_lib/include/franka_control_lib/: franka_controller.hpp  motion_generator.hpp
franka_control_lib/src/: franka_controller.cpp  motion_generator.cpp
franka_hri/: CMakeLists.txt  package.xml  setup.cfg  setup.py
franka_hri/franka_hri/: blocks.py  human_input.py  keyboard_input.py  network.py  network_testing.py  sorting.py
franka_hri/launch/: realsense.launch.py
franka_hri/src/: network.py
franka_hri_bringup/: package.xml  setup.cfg  setup.py
franka_hri_bringup/launch/: hri_sorting.launch.py
franka_hri_interfaces/: CMakeLists.txt  package.xml
franka_hri_interfaces/action/: DoActionModel.action  EmptyAction.action  PoseAction.action
franka_hri_interfaces/msg/: BlockPlacementInfo.msg  EECommand.msg  Increment.msg
franka_hri_interfaces/srv/: CorrectionService.srv  CreateBox.srv  GestNet.srv  MoveBlock.srv  SaveModel.srv  SetIncrement.srv  SetPose.srv  SortNet.srv  UpdateMarkers.srv  VLAService.srv
franka_hri_sorting/: package.xml  setup.cfg  setup.py
franka_hri_sorting/config/: apriltag_d405_config.yaml  apriltag_d435_config.yaml  sorting.rviz
franka_hri_sorting/franka_hri_sorting/: blocks.py  human_input.py  human_interaction.py  network.py  network_node.py  network_training.py
franka_hri_sorting/launch/: human_interaction.launch.py  realsense.launch.py  sorting.launch.py
franka_hri_sorting/utils/: network_anal.py
franka_vla/: package.xml  setup.cfg  setup.py
franka_vla/franka_vla/: data_recorder_node.py  franka_octo.py  vla_node.py
franka_vla/launch/: franka_vla.launch.py  realsense.launch.py  record_data.launch.py
franka_vla/models/: finetune_octo.py  finetune_octo_old.py
franka_vla/models/scripts/: convert_data.py  finetune_octo.py  finetune_octo_old.py
hri_image_processing/: package.xml  setup.py
hri_image_processing/hri_image_processing/: emotions.py  image_processing.py
numsr_franka_moveit_config/: .setup_assistant
numsr_franka_moveit_config/config/: panda_simulated_config.yaml  servo_parameters.yaml
